feat(sdk): support java 17